--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,92 +2,15 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        zig-version: ['0.15.1', '0.15.0']
-
+    name: Build and Test
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Setup Zig
-      uses: mlugg/setup-zig@v2
-      with:
-        version: ${{ matrix.zig-version }}
-
-    - name: Check C/C++ formatting (clang-format)
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y clang-format
-        find src/ -type f \( -name "*.c" -o -name "*.cc" -o -name "*.cpp" -o -name "*.h" -o -name "*.hpp" \) -exec clang-format --dry-run --Werror {} +
-
-    - name: Check Zig formatting
-      run: zig fmt --check src/
-
-    - name: Build and Test (zig build test)
-      run: zig build test
-
-    - name: Build (zig build)
-      run: zig build
-
-    - name: Test All (zig build test --all)
-      run: zig build test --all
-
-    - name: Run simple_tcp_test.zig
-      run: zig run simple_tcp_test.zig
-
-  windows-test:
-    runs-on: windows-latest
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Setup Zig
-      uses: mlugg/setup-zig@v2
-      with:
-        version: '0.15.1'
-
-    - name: Build and Test (zig build test)
-      run: zig build test
-
-    - name: Build (zig build)
-      run: zig build
-
-    - name: Test All (zig build test --all)
-      run: zig build test --all
-
-    - name: Run simple_tcp_test.zig
-      run: zig run simple_tcp_test.zig
-
-    - name: Run test_windows_networking.zig
-      run: zig run test_windows_networking.zig
-
-  macos-test:
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Setup Zig
-      uses: mlugg/setup-zig@v2
-      with:
-        version: '0.15.1'
-
-    - name: Build and Test (zig build test)
-      run: zig build test
-
-    - name: Build (zig build)
-      run: zig build
-
-    - name: Test All (zig build test --all)
-      run: zig build test --all
-
-    - name: Run simple_tcp_test.zig
-      run: zig run simple_tcp_test.zig
+      - uses: actions/checkout@v3
+      - uses: mlugg/setup-zig@v2
+      - run: zig build test
