--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    name: Build and Test
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        zig: [ 0.15.0, master ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    name: Zig ${{ matrix.zig }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - uses: mlugg/setup-zig@v2
+      - name: Setup Zig
+        uses: korandoru/setup-zig@v1
+        with:
+          zig-version: ${{ matrix.zig }}
       - run: zig build test
