--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        zig: [ 0.15.0, master ]
+        zig: [ "0.15.1" ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
     name: Zig ${{ matrix.zig }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Zig
-        uses: korandoru/setup-zig@v1
+        uses: mlugg/setup-zig@v1
         with:
-          zig-version: ${{ matrix.zig }}
+          version: ${{ matrix.zig }}
       - run: zig build test
