--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 **/*.DS_Store
 **/*.zig-cache
 zig-out/
+
+# Common build outputs
+build/
+CMakeCache.txt
+CMakeFiles/
+*.ninja
+compile_commands.json
+zig-cache/
