Refactor project structure and enhance configuration management
- Updated `.gitignore` to include additional build artifacts and performance results.
- Changed Zig version in `.zigversion` to 0.15.1 for compatibility.
- Deleted obsolete benchmark and network test files, streamlining the project.
- Introduced a new performance CI/CD tool in `build.zig` for automated regression testing.
- Enhanced configuration validation in `config.zig` with comprehensive error handling.

These changes improve project organization, ensure compatibility with the latest Zig version, and enhance performance monitoring capabilities.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-# Zig build artifacts
-zig-cache/
-zig-out/
-build/
-.zig-cache/
+**/*zig-cache/
+**/*zig-out/
+**/*build/
 
 # Documentation
 docs/build/
+performance_results/
 
 # Editor and IDE
 .vscode/
