--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -36,10 +36,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Zig
-        uses: goto-bus-stop/setup-zig@v2
+      - name: Set up Zig 0.15
+        uses: mlugg/setup-zig@v2
         with:
-          version: 0.12.0
+          version: 0.15.0
 
       - name: Cache Zig dependencies
         uses: actions/cache@v3
