Complete Zig 0.15 compatibility and tool suite validation
- Fixed performance_profiler.zig for Zig 0.15:
  - Switched HashMapUnmanaged to AutoHashMapUnmanaged
  - Removed unbounded loop counters
  - Made never-mutated allocations const
  - Fixed zero-arg print calls with .{}
  - Removed invalid free of operation_name

- Updated neural.zig for Zig 0.15 random API:
  - Changed std.rand.DefaultPrng to std.Random.DefaultPrng
  - Made random variables mutable

- Fixed windows_network_test.zig:
  - Added @intCast for i128 to u64 conversions
  - Updated getsockopt call for Zig 0.15

- Fixed static_analysis.zig:
  - Added SuppressEntry struct for type consistency

- Added WASM cross-compilation support:
  - Created wasm_wasi_stub.zig and wasm_freestanding_stub.zig
  - Updated build.zig with proper root source selection

- All tests and benchmarks passing
- All tools (docs, analyze, profile) working
- Cross-platform compilation verified

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,9 @@
-# WDBX-AI Documentation - Jekyll Configuration
-title: "WDBX-AI Documentation"
+# ABI Documentation - Jekyll Configuration
+title: "ABI Documentation"
 description: "High-performance vector database with AI capabilities"
-url: "https://your-username.github.io"
-baseurl: "/wdbx-ai"
-
+url: "https://donaldfilimon.github.io/abi/"
+baseurl: "/abi"
+  
 # GitHub Pages settings
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
@@ -39,7 +39,7 @@ author:
 github:
   repository_url: "https://github.com/donaldfilimon/abi"
   repository_name: "wdbx-ai"
-  owner_name: "your-username"
+  owner_name: "donaldfilimon"
 
 # Social media
 social:
