Enhance project structure and add new features
- Updated `.gitignore` to include additional build artifacts for better management of generated files.
- Introduced a new `weather_ui.html` file for the Abi Weather App, providing a user-friendly interface for real-time weather information.
- Refactored various Zig files to integrate core functionalities, replacing outdated SIMD references with core module imports for improved performance and maintainability.
- Added new tests for connector and plugin integration, ensuring robust functionality and error handling across the system.

These changes improve the overall organization and usability of the project, while enhancing the performance and maintainability of the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,17 @@ desktop.ini
 
 # Cell language build artifacts
 *.cell.out
+*.pdb
+*.ilk
+*.exp
+*.lib
+*.obj
+*.o
+*.obj
+*.lib
+*.exp
+*.ilk
+*.pdb
 
 # AI model files
 *.onnx
@@ -60,10 +71,6 @@ desktop.ini
 *.prof
 *.tracy
 perf.data*
-
-# Core dumps
-core
-*.core
 
 # Binary executables
 abi
