--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        zig: [ 0.15.0, master ]
+        zig: [ 0.16.0-dev.230, master ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
     name: Zig ${{ matrix.zig }} on ${{ matrix.os }}
@@ -21,4 +21,12 @@ jobs:
         uses: korandoru/setup-zig@v1
         with:
           zig-version: ${{ matrix.zig }}
-      - run: zig build test
+      - name: Check formatting
+        run: zig fmt --check .
+      - name: Build
+        run: zig build
+      - name: Test (all)
+        run: zig build test-all
+      - name: Test WebSocket (optional)
+        if: ${{ github.event.inputs.run_ws_tests == 'true' }}
+        run: zig build test-ws
