--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        zig: [ 0.16.0-dev.230, master ]
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        zig: [ 0.15.1, 0.16.0-dev.280, master ]
+        os: [ ubuntu-latest, ubuntu-20.04, ubuntu-18.04, windows-latest, windows-2019, macos-latest, macos-13 ]
+        arch: [ x86_64, aarch64 ]
     runs-on: ${{ matrix.os }}
     name: Zig ${{ matrix.zig }} on ${{ matrix.os }}
     steps:
