--- a/deploy/docker/Dockerfile.gpu
+++ b/deploy/docker/Dockerfile.gpu
@@ -11,9 +11,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Zig
-RUN wget -O zig.tar.xz https://ziglang.org/download/0.16.0-dev/zig-linux-x86_64-0.16.0-dev.238+580b6d1fa.tar.xz \
+RUN wget -O zig.tar.xz https://ziglang.org/builds/zig-x86_64-linux-0.16.0-dev.254+6dd0270a1.tar.xz \
     && tar -xf zig.tar.xz \
-    && mv zig-linux-x86_64-0.16.0-dev.238+580b6d1fa /usr/local/zig \
+    && mv zig-x86_64-linux-0.16.0-dev.254+6dd0270a1 /usr/local/zig \
     && rm zig.tar.xz
 
 ENV PATH="/usr/local/zig:$PATH"
