--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # ABI Documentation - Jekyll Configuration
 title: "ABI Documentation"
 description: "High-performance vector database with AI capabilities"
-url: "https://donaldfilimon.github.io/abi/"
+url: "https://donaldfilimon.github.io"
 baseurl: "/abi"
   
 # GitHub Pages settings
@@ -50,7 +50,6 @@ social:
 # Build settings
 markdown: kramdown
 highlighter: rouge
-theme: minima
 
 # Exclude from build
 exclude:
