--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -37,9 +37,9 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Zig
-        uses: goto-bus-stop/setup-zig@v2
+        uses: mlugg/setup-zig@v2
         with:
-          version: 0.12.0
+          version: 0.16.0-dev.254+6dd0270a1
 
       - name: Cache Zig dependencies
         uses: actions/cache@v3
