tooling: enforce module docs for zig sources

--- a/.gitattributes
+++ b/.gitattributes
@@ -58,10 +58,6 @@ zig-cache/ -diff -merge
 zig-out/ -diff -merge
 *.tmp -diff -merge
 
-# Test artifacts
-*_test binary
-test_* binary
-
-# Zig tests should remain textual for review
+# Zig integration and unit tests should remain textual for review
 tests/**/*.zig text eol=lf diff=zig
 src/tests/**/*.zig text eol=lf diff=zig
