--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Zig
         uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev.254+6dd0270a1
+          version: 0.16.0-dev
 
       - name: Cache Zig dependencies
         uses: actions/cache@v3
