--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Formatting
         run: zig fmt --check src tests
       - name: Upload docs
-        if: always()
+        if: runner.os == 'Linux'
         uses: actions/upload-artifact@v4
         with:
           name: abi-docs-${{ runner.os }}
@@ -41,11 +41,10 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: mlugg/setup-zig@v2
+      - uses: actions/download-artifact@v4
         with:
-          version: 0.16.0-dev.393+dd4be26f5
-      - run: zig build docs --summary all
+          name: abi-docs-Linux
+          path: zig-out/docs
       - uses: actions/configure-pages@v4
       - uses: actions/upload-pages-artifact@v3
         with:
