--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -39,23 +39,13 @@ jobs:
       - name: Setup Zig
         uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev
-
-      - name: Cache Zig dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/zig
-            zig-cache
-          key: ${{ runner.os }}-zig-${{ hashFiles('build.zig.zon') }}
-          restore-keys: |
-            ${{ runner.os }}-zig-
+          version: 0.16.0-dev.393+dd4be26f5
 
       - name: Build project
-        run: zig build
+        run: zig build --summary all
 
       - name: Generate documentation
-        run: zig run tools/docs_generator.zig
+        run: zig build docs --summary all
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -63,7 +53,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './docs'
+          path: zig-out/docs
 
   # Deploy to GitHub Pages
   deploy:
