--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,15 @@ jobs:
   build-test:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        zig-version: [0.16.0-dev.427+86077fe6b, master]
     steps:
       - uses: actions/checkout@v4
       - uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev.427+86077fe6b
+          version: ${{ matrix.zig-version }}
       - name: Build
         run: zig build --summary all
       - name: Unit tests
@@ -25,10 +27,10 @@ jobs:
       - name: Formatting
         run: zig fmt --check src tests
       - name: Upload docs
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && matrix['zig-version'] == '0.16.0-dev.427+86077fe6b'
         uses: actions/upload-artifact@v4
         with:
-          name: abi-docs-${{ runner.os }}
+          name: abi-docs-${{ runner.os }}-${{ matrix['zig-version'] }}
           path: zig-out/docs
   pages:
     if: github.ref == 'refs/heads/main'
@@ -43,7 +45,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: abi-docs-Linux
+          name: abi-docs-Linux-0.16.0-dev.427+86077fe6b
           path: zig-out/docs
       - uses: actions/configure-pages@v4
       - uses: actions/upload-pages-artifact@v3
