--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,27 +9,39 @@ jobs:
   build-test:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
-      - uses: mlugg/setup-zig@v2
+      - name: Setup Zig
+        uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev.393+dd4be26f5
+          version-file: .zigversion
+      - name: Cache Zig dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/zig
+            zig-cache
+          key: ${{ runner.os }}-zig-${{ hashFiles('build.zig.zon') }}
+          restore-keys: |
+            ${{ runner.os }}-zig-
       - name: Build
         run: zig build --summary all
       - name: Unit tests
         run: zig build test --summary all
+      - name: Formatting
+        run: zig fmt --check src tests build.zig
       - name: Documentation
         run: zig build docs --summary all
-      - name: Formatting
-        run: zig fmt --check src tests
-      - name: Upload docs
+      - name: Upload docs artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: abi-docs-${{ runner.os }}
           path: zig-out/docs
+
   pages:
     if: github.ref == 'refs/heads/main'
     needs: build-test
@@ -42,9 +54,19 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v4
-      - uses: mlugg/setup-zig@v2
+      - name: Setup Zig
+        uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev.393+dd4be26f5
+          version-file: .zigversion
+      - name: Cache Zig dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/zig
+            zig-cache
+          key: ${{ runner.os }}-zig-${{ hashFiles('build.zig.zon') }}
+          restore-keys: |
+            ${{ runner.os }}-zig-
       - run: zig build docs --summary all
       - uses: actions/configure-pages@v4
       - uses: actions/upload-pages-artifact@v3
