--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -39,10 +39,10 @@ jobs:
       - name: Setup Zig
         uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev
+          version-file: .zigversion
 
       - name: Cache Zig dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cache/zig
@@ -51,19 +51,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-zig-
 
-      - name: Build project
-        run: zig build
-
-      - name: Generate documentation
-        run: zig run tools/docs_generator.zig
+      - name: Build documentation
+        run: zig build docs --summary all
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs'
+          path: zig-out/docs
 
   # Deploy to GitHub Pages
   deploy:
@@ -76,4 +73,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
