--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Zig
         uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev
+          version: 0.16.0-dev.393+dd4be26f5
 
       - name: Cache Zig dependencies
         uses: actions/cache@v3
@@ -52,18 +52,18 @@ jobs:
             ${{ runner.os }}-zig-
 
       - name: Build project
-        run: zig build
+        run: zig build --summary all
 
       - name: Generate documentation
-        run: zig run tools/docs_generator.zig
+        run: zig build docs --summary all
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs'
+          path: zig-out/docs
 
   # Deploy to GitHub Pages
   deploy:
@@ -76,4 +76,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
