--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev.427+86077fe6b
+          version: 0.16.0
       - name: Build
         run: zig build --summary all
       - name: Unit tests
@@ -24,30 +24,3 @@ jobs:
         run: zig build docs --summary all
       - name: Formatting
         run: zig fmt --check src tests
-      - name: Upload docs
-        if: runner.os == 'Linux'
-        uses: actions/upload-artifact@v4
-        with:
-          name: abi-docs-${{ runner.os }}
-          path: zig-out/docs
-  pages:
-    if: github.ref == 'refs/heads/main'
-    needs: build-test
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: abi-docs-Linux
-          path: zig-out/docs
-      - uses: actions/configure-pages@v4
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: zig-out/docs
-      - id: deployment
-        uses: actions/deploy-pages@v4
