--- a/.github/workflows/zig.yml
+++ b/.github/workflows/zig.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        zig-version: ["0.13.0"]
+        os: [self.hosted]
+        zig-version: ["0.16.0-dev]
 
     steps:
       - name: Checkout repository
