--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -29,7 +29,7 @@ concurrency:
 jobs:
   # Build documentation
   build:
-    runs-on: ubuntu-latest
+    runs-on: self.hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Zig
         uses: mlugg/setup-zig@v2
         with:
-          version: 0.16.0-dev.427+86077fe6b
+          version: master
 
       - name: Cache Zig dependencies
         uses: actions/cache@v3
@@ -55,7 +55,7 @@ jobs:
         run: zig build
 
       - name: Generate documentation
-        run: zig run src/tools/docs_generator/main.zig
+        run: zig build docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
