--- a/.github/workflows/zig.yml
+++ b/.github/workflows/zig.yml
@@ -5,7 +5,6 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main, develop]
-  workflow_dispatch:
 
 jobs:
   build-test-run:
@@ -13,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows]
+        os: [self.hosted]
         zig-version: ["master"]
 
     steps:
