--- a/.github/workflows/zig.yml
+++ b/.github/workflows/zig.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [self.hosted]
+        os: [windows-latest]
         zig-version: ["master"]
 
     steps:
