--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,10 +4,9 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [main, master]
 
-  # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch: 
+  # Allows you to run this workflow manually from the Actions t
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -27,7 +26,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ALIENWARE
+    runs-on: self.runner
     steps:
       - name: Checkout
         uses: actions/checkout@v4
