docs: normalize zig version docs and add consistency guard

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,5 +123,8 @@ jobs:
           restore-keys: |
             zig-cache-lint-
 
+      - name: Check Zig version consistency
+        run: bash scripts/check_zig_version_consistency.sh
+
       - name: Lint check
         run: zig build lint
