ci: add CLI smoke tests step to quality-gates job
zig build cli-tests was available per AGENTS.md but missing from CI.
Added to quality-gates job after full-check and validate-flags.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,8 @@ jobs:
         run: zig build validate-baseline
       - name: Validate feature flags
         run: zig build validate-flags
+      - name: CLI smoke tests
+        run: zig build cli-tests
 
   examples:
     name: Examples
