UPDATE ZIG VERSION TO 0.16.0-DEV.2637+6A9510C0E
This commit updates the Zig toolchain version across the repository to
`0.16.0-dev.2637+6a9510c0e`. All documentation, build scripts, and
configuration files have been updated to reflect this new version pin.

Key changes

--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,8 @@ perf.data*
 !.claude/rules/**
 !.claude/skills/
 !.claude/skills/**
+!.claude/agents/
+!.claude/agents/**
 !.claude/settings.json
 .claude-plugin/
 
